simplify pom.xml